fix: improve perf for single source queries